# solum

./: CREDITS.md  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: lib.rs  main.rs  prelude.rs
src/actors/: mod.rs
src/actors/enemy/: boid.rs  brain.rs  mod.rs
src/actors/env/: brick.rs  mod.rs
src/actors/player/: assets.rs  mod.rs  state.rs
src/assets/: mod.rs
src/core/: asset_tracking.rs  audio.rs  debug.rs  dev.rs  ext.rs  mod.rs  physics.rs  system.rs  timer.rs  transform.rs  utils.rs  ysort.rs
src/core/dev/: editor.rs  mod.rs  physics.rs  picking.rs  select.rs  settings.rs  ui.rs
src/core/ecs/: marker.rs  mod.rs  pause.rs  sensor.rs  spawn.rs  transform.rs
src/debug/: mod.rs
src/game/: animation.rs  level.rs  mod.rs  movement.rs  player.rs
src/level/: camera.rs  follow.rs  marker.rs  mod.rs
src/level/actors/: mod.rs  planet.rs
src/level/actors/enemy/: mod.rs
src/level/actors/player/: mod.rs
src/level/env/: mod.rs
src/level/nav/: agent.rs  mod.rs
src/level/tilemap/: mod.rs  sync.rs
src/menus/: credits.rs  main.rs  pause.rs  settings.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
src/theme/: interaction.rs  widget.rs
src/ui/: mod.rs
src/ui/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs
src/ui/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
src/ui/theme/: interaction.rs  mod.rs  widget.rs
