[package]
name = "solum"
version = "0.0.0"
edition = "2024"

[dependencies]
# generic
rand = { version = "0.9" }

# bevy
bevy = { version = "0.16.1" }

# plugins
avian2d = { version = "0.3", features = [] }
inspector-egui = { package = "bevy-inspector-egui", version = "0.32" }
pancam = { package = "bevy_pancam", version = "0.18" }
hanabi = { package = "bevy_hanabi", version = "0.16", default-features = false, features = ["2d"] }
lunex = { package = "bevy_lunex", version = "0.4", default-features = false }
tweening = { package = "bevy_tweening", version = "0.13" }

egui_dock = { version = "0.16" }

# override
log = { version = "*", optional = true }

[features]
debug = ["bevy/dynamic_linking"]
tracy = ["bevy/trace_tracy", "bevy/trace_tracy_memory", "hanabi/trace"]
release = ["log/release_max_level_error"]

[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[profile.pub]
inherits = "release"
panic = "abort"
strip = true
codegen-units = 1
lto = "fat"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
type_complexity = "allow"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
nonstandard_macro_braces = "warn"
redundant_closure_for_method_calls = "warn"
print_stdout = "warn"
print_stderr = "warn"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"